# Open_Duck_Playground

./: pyproject.toml
playground/open_duck_mini_v2/: joystick_chatgpt.py  mujoco_infer_gpt.py
